Fix light-colored label text in dark mode

--- a/app/assets/stylesheets/themes/_dark.scss
+++ b/app/assets/stylesheets/themes/_dark.scss
@@ -229,9 +229,7 @@ $line-removed-dark: $red-200;
 }
 
 // white-ish text for light labels
-// and for scoped label value (the right section)
-.gl-label-text-light.gl-label-text-light,
-.gl-label-text-dark + .gl-label-text-dark {
+.gl-label-text-light.gl-label-text-light {
   color: $gray-900;
 }
 
